# unwindy

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: pyinstaller_entry.py
devdocs/: plans.md  progress.md  refactor_0.md
scripts/: dev.sh
tests/: __init__.py  _pebuilder.py  test_analyzer.py  test_cli.py  test_flow.py  test_golden.py  test_handlers.py  test_pe.py  test_render.py  test_trampolines.py  test_tui.py  test_unwind.py
tests/golden/: b325_first12.json  hashes.json
unwindy/: __init__.py  __main__.py  analyzer.py  branch.py  cli.py  errors.py  flow.py  handlers.py  pe.py  render.py  trampolines.py  tui.py  unwind.py
unwindy/tui/: __init__.py  app.py  keys.py  text.py
