[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "unwindy"
version = "0.0.7"
description = "Slim PE64 x64 exception/unwind information viewer (no heavy deps)"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "kmx00" }]
keywords = ["pe", "pe64", "x64", "unwind", "exception", "uwop", "rtl", "seh"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Disassemblers",
    "Operating System :: OS Independent",
]
# Zero hard runtime dependencies: the PE/unwind core is pure standard library.
# The interactive forwarding-flow disassembly view uses iced-x86, exposed as an
# optional extra and imported lazily so the base install stays dependency-free.
dependencies = []

[project.optional-dependencies]
flow = ["iced-x86>=1.18"]

[project.scripts]
unwindy = "unwindy.cli:main"

[project.urls]
Homepage = "https://github.com/kmx00/unwindy"

[tool.setuptools]
packages = ["unwindy", "unwindy.tui"]

[tool.setuptools.package-data]
unwindy = ["py.typed"]
